# sd-flujo

./: Claude Research- Service Desk.md  GDR- ServiceDeskLangchain.md  PPXL Deep resaearch - Serv.md  PPXL LABS - Service desk.md  README.md
codex/: PLAN-analisis-servicedesk.md  (+2 more)
servicedesk-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
servicedesk-agent/docs-by-claude-code/: ARCHITECTURE.md  DECISION_LOG.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md
servicedesk-agent/scripts/: run_local.py
servicedesk-agent/src/: __init__.py
servicedesk-agent/src/agents/: __init__.py  base_agent.py  billing_agent.py  escalation_agent.py  general_inquiry_agent.py  it_support_agent.py  router_agent.py
servicedesk-agent/src/agents/stubs/: __init__.py  bank_identifier_agent.py  caller_validator_agent.py  email_parser_agent.py  problem_classifier_agent.py
servicedesk-agent/src/api/: main.py
servicedesk-agent/src/api/routes/: health.py  tickets.py
servicedesk-agent/src/config/: constants.py  prompts.py  settings.py
servicedesk-agent/src/graph/: __init__.py  edges.py  nodes.py  service_desk_graph.py
servicedesk-agent/src/llm/: __init__.py  gemini_client.py
servicedesk-agent/src/state/: __init__.py  base_state.py  enums.py
servicedesk-agent/src/tools/: mock_tools.py
servicedesk-agent/src/tools/stubs/: __init__.py
servicedesk-agent/tests/: __init__.py  conftest.py
servicedesk-agent/tests/integration/: test_api.py
servicedesk-agent/tests/unit/: test_state.py
servicedesk-agent/tests/unit/test_graph/: test_edges.py
